--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Congratulations | Kubernetes</title>
+<title>Congratulations | ARGO PROJ | Kubernetes</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="preload" as="font">
 <link
   href="~/img/kubernetes-engine-icon.png"
