--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -15,6 +15,6 @@
 
     <div class="message">
         <h1>@Model.Message</h1>
-        <h2>Congratulations, you successfully deployed a Dotnet application with Argo CD!</h2>
+        <h2>Congratulations, you successfully deployed a Dotnet application with Argo CD on Version 1.0!</h2>
     </div>
 </div>
